# chuk-lmn

./: .gitignore  Makefile  README.md  TODO.md  ast_to_wat.py  compile.sh  compile_run.sh  debug_fields.py  force_imports.py  full-grammar.ebnf  hello.py  main.py  parser_cli.py  pyproject.toml  run_wasm.py  run_wasm_debug.py  tokenizer_cli.py  wasm_emitter_cli.py
compiler/ast/: __init__.py  ast_node.py  node_kind.py  program.py  variable.py
compiler/lexer/: token.py  token_type.py  tokenizer.py
docs/: 01-Tokenizer.md  02-Parser.md  03-Typechecker.md  04-Emitter.md  05-Wat2Wasm.md  REFERENCE_CARD.MD  full-grammar.ebnf
lmn/debug_scripts/: debug_fields.py  force_imports.py
samples/: factorial.lmn  sum_loop.lmn
samples/ast/: factorial_ast.json  sample_program.json  sample_program.jsonclear  sample_program_ast.json
samples/ast_typechecked/: sample_program.json  sample_program.jsonclear
samples/ast_wasm/: sample_program.json
samples/lmn/: 09_mix_features.lmn  10_llm_integration.lmn  10_llm_simple.lmn  factorial.lmn  fibonacci.lmn  hello_literal.lmn  hello_math.lmn  hello_math_float.lmn  hello_math_mixed_types.lmn  sample_for_loop.lmn  sample_program.lmn  sample_program_json.lmn  simple_loop.lmn  sum_loop.lmn  test_functions_with_named.lmn  test_typed_arrays.lmn  tools.lmn  type_inferred_arrays_test.lmn
samples/tokenized/: sample_program.txt
samples/tokenizer/: sample_program.txt
samples/wasm/: factorial.wasm  sample_program.wasm
samples/wat/: factorial.wat  sample_program.wat
src/chuk_lmn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  (+1 more)
(+330 files in other folders)
