[project]
name = "chuk-lmn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "pydantic>=2.10.4",
    "wasmtime>=28.0.0",
]

[tool.uv]
package = true

[project.scripts]
# This key tells uv the name of the command (`tokenizer-cli`) 
# and the function to execute (`lmn.debug_scripts.tokenizer_cli:main`)
tokenizer-cli = "lmn.cli.tokenizer_cli:main"
parser-cli = "lmn.cli.parser_cli:main"
typechecker = "lmn.cli.typechecker:main"
ast-to-wat = "lmn.cli.ast_to_wat:main"